sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:7: error: not found: value blanc
  while((bleu+rouge+blanc)!=lgr){
                    ^DutchFlagAlgo:11: error: not found: value blanc
        case BLANC => echange(i,bleu+blanc+1); blanc += 1;
                                     ^DutchFlagAlgo:11: error: not found: value blanc
        case BLANC => echange(i,bleu+blanc+1); blanc += 1;
                                               ^